--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Static Template</title>
   </head>
   <body>
-    <h1>Modified online, there is no bundler or bundling involved!</h1>
+    <h1>Modified online with prose.io, there is no bundler or bundling involved!</h1>
   </body>
 </html>
